--- a/Chart.storyboard
+++ b/Chart.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K1r-cS-5oW">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K1r-cS-5oW">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,11 +12,11 @@
             <objects>
                 <viewController storyboardIdentifier="chartView" modalPresentationStyle="fullScreen" id="K1r-cS-5oW" userLabel="Chart View Controller" customClass="ChartViewController" customModule="my_tracking_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rJU-my-Evd">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rkf-U0-j8c">
-                                <rect key="frame" x="20" y="64" width="32" height="32"/>
+                                <rect key="frame" x="20" y="20" width="32" height="32"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="arrow_left_black">
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="35"/>
@@ -26,14 +26,11 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pcd-kb-4hi">
-                                <rect key="frame" x="10" y="104" width="394" height="571"/>
+                                <rect key="frame" x="10" y="60" width="355" height="597"/>
                                 <color key="backgroundColor" red="0.80476719139999997" green="0.93354827169999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="pcd-kb-4hi" secondAttribute="height" multiplier="318:461" id="PSn-kn-wQP"/>
-                                </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="63" translatesAutoresizingMaskIntoConstraints="NO" id="K8v-4a-uMI">
-                                <rect key="frame" x="51" y="806" width="312" height="31"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="K8v-4a-uMI">
+                                <rect key="frame" x="44.5" y="611" width="286" height="31"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ALTITUDE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aoA-ZO-D82">
                                         <rect key="frame" x="0.0" y="0.0" width="82" height="31"/>
@@ -42,14 +39,14 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="527-Xh-iMp">
-                                        <rect key="frame" x="145" y="0.0" width="51" height="31"/>
+                                        <rect key="frame" x="132" y="0.0" width="51" height="31"/>
                                         <color key="onTintColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <action selector="switchChartValue:" destination="K1r-cS-5oW" eventType="valueChanged" id="kbY-0e-b4V"/>
                                         </connections>
                                     </switch>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SPEED" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctf-T6-fKV">
-                                        <rect key="frame" x="257" y="0.0" width="55" height="31"/>
+                                        <rect key="frame" x="231" y="0.0" width="55" height="31"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -57,7 +54,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ALTITUDE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T7Q-q3-OtA">
-                                <rect key="frame" x="159.5" y="68" width="95" height="24"/>
+                                <rect key="frame" x="140" y="24" width="95" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -69,6 +66,7 @@
                             <constraint firstItem="pcd-kb-4hi" firstAttribute="top" secondItem="T7Q-q3-OtA" secondAttribute="bottom" constant="12" id="8yd-1t-rlS"/>
                             <constraint firstItem="Rfn-H1-KPm" firstAttribute="bottom" secondItem="K8v-4a-uMI" secondAttribute="bottom" constant="25" id="D7W-eP-dIc"/>
                             <constraint firstItem="pcd-kb-4hi" firstAttribute="centerX" secondItem="Rfn-H1-KPm" secondAttribute="centerX" id="LBU-D8-FHN"/>
+                            <constraint firstItem="pcd-kb-4hi" firstAttribute="bottom" secondItem="Rfn-H1-KPm" secondAttribute="bottom" constant="-10" id="RQY-CM-e2X"/>
                             <constraint firstItem="rkf-U0-j8c" firstAttribute="leading" secondItem="Rfn-H1-KPm" secondAttribute="leading" constant="20" id="Vpq-w1-wfM"/>
                             <constraint firstItem="K8v-4a-uMI" firstAttribute="centerX" secondItem="Rfn-H1-KPm" secondAttribute="centerX" id="Z9o-yj-ZSG"/>
                             <constraint firstItem="pcd-kb-4hi" firstAttribute="top" secondItem="Rfn-H1-KPm" secondAttribute="top" constant="60" id="gL3-Ou-tgk"/>
