--- a/Map.storyboard
+++ b/Map.storyboard
@@ -18,7 +18,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="UfD-CY-Zmq">
                                 <rect key="frame" x="0.0" y="-5" width="414" height="692"/>
                                 <subviews>
-                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="z3U-gV-IkQ">
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z3U-gV-IkQ">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="504.66666666666669"/>
                                         <color key="backgroundColor" red="1" green="0.70854048849999995" blue="0.69921336440000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </mapView>
