--- a/Chart.storyboard
+++ b/Chart.storyboard
@@ -16,7 +16,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rkf-U0-j8c">
-                                <rect key="frame" x="20" y="20" width="32" height="32"/>
+                                <rect key="frame" x="20" y="20" width="30" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="LqG-JA-Sxk"/>
+                                    <constraint firstAttribute="width" constant="30" id="RCW-Zx-2Lu"/>
+                                </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" image="arrow_left_black">
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="35"/>
