--- a/Map.storyboard
+++ b/Map.storyboard
@@ -62,8 +62,8 @@
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="DISTANCE GPS, km" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6D-yr-Uko">
-                                                                <rect key="frame" x="35.5" y="47" width="116.5" height="14.5"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="DISTANCE, km" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6D-yr-Uko">
+                                                                <rect key="frame" x="49.5" y="47" width="88" height="14.5"/>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                                                 <color key="textColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
@@ -155,7 +155,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="deh-zn-pSH" userLabel="Altitude Stack View">
-                                <rect key="frame" x="131.5" y="25" width="112" height="35"/>
+                                <rect key="frame" x="110.5" y="25" width="154" height="35"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-mountain-100" translatesAutoresizingMaskIntoConstraints="NO" id="UVH-VO-1a7" userLabel="AltitudeIcon">
                                         <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
@@ -174,6 +174,14 @@
                                         <color key="textColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="walk" translatesAutoresizingMaskIntoConstraints="NO" id="mfP-Qa-jYo" userLabel="AltitudeIcon">
+                                        <rect key="frame" x="119" y="0.0" width="35" height="35"/>
+                                        <color key="tintColor" red="0.13911497589999999" green="0.3948251009" blue="0.56501853469999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="35" id="7it-hC-Xpp"/>
+                                            <constraint firstAttribute="height" constant="35" id="9jn-7l-LlO"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ldZ-GE-gzT" userLabel="Center">
@@ -267,6 +275,7 @@
                         <outlet property="thirdCardLabel" destination="Ajh-ZB-iN3" id="cER-7p-ubY"/>
                         <outlet property="timeLabel" destination="SJQ-eg-ztk" id="G1O-aj-HeZ"/>
                         <outlet property="timeUnitLabel" destination="2ng-cD-emt" id="Dqq-dJ-xxG"/>
+                        <outlet property="workoutTypeLabel" destination="mfP-Qa-jYo" id="7z1-A3-kdm"/>
                         <segue destination="MhB-Pv-Eh9" kind="show" identifier="summaryView" id="Jge-Jg-By2"/>
                     </connections>
                 </viewController>
@@ -318,5 +327,6 @@
         <image name="icons8-mountain-100" width="100" height="100"/>
         <image name="location.north.fill" catalog="system" width="108" height="128"/>
         <image name="map" catalog="system" width="128" height="113"/>
+        <image name="walk" width="512" height="512"/>
     </resources>
 </document>
